--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "prismjs": "^1.16.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-prism-component": "^1.1.1",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
