--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prismjs": "^1.16.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-code-highlight": "^0.7.1",
     "vue-prism-component": "^1.1.1",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
